Test(*): domain 모듈의 테스트 수정