@@ -1,10 +1,10 @@
-package com.jabiseo.domain.plan.domain;
+package com.jabiseo.domain.plan.service;
 
 import com.jabiseo.domain.learning.domain.LearningMode;
 import com.jabiseo.domain.learning.domain.LearningRepository;
 import com.jabiseo.domain.learning.dto.LearningWithSolvingCountQueryDto;
 import com.jabiseo.domain.member.domain.Member;
-import com.jabiseo.domain.plan.service.PlanProgressService;
+import com.jabiseo.domain.plan.domain.*;
 import fixture.MemberFixture;
 import fixture.PlanFixture;
 import fixture.PlanItemFixture;
@@ -61,7 +61,7 @@ class PlanProgressServiceTest {
                 PlanItemFixture.createPlanItem(ActivityType.STUDY, GoalType.WEEKLY),
                 PlanItemFixture.createPlanItem(ActivityType.PROBLEM, GoalType.WEEKLY)
         );
-        List<LearningWithSolvingCountQueryDto> queryDtos = Arrays.asList(new LearningWithSolvingCountQueryDto(LearningMode.EXAM, 10L, LocalDateTime.now(), 10L));
+        List<LearningWithSolvingCountQueryDto> queryDtos = List.of(new LearningWithSolvingCountQueryDto(LearningMode.EXAM, 10L, LocalDateTime.now(), 10L));
         WeekPeriod currentWeekPeriod = new WeekPeriod(LocalDate.now().withDayOfMonth(1), LocalDate.now().plusDays(6));
 
         given(weeklyDefineStrategy.getWeekPeriod(LocalDate.now())).willReturn(currentWeekPeriod);
@@ -85,7 +85,7 @@ class PlanProgressServiceTest {
                 PlanItemFixture.createPlanItem(ActivityType.EXAM, GoalType.DAILY),
                 PlanItemFixture.createPlanItem(ActivityType.STUDY, GoalType.DAILY)
         );
-        List<LearningWithSolvingCountQueryDto> queryDtos = Arrays.asList(new LearningWithSolvingCountQueryDto(LearningMode.EXAM, 10L, LocalDateTime.now(), 10L));
+        List<LearningWithSolvingCountQueryDto> queryDtos = List.of(new LearningWithSolvingCountQueryDto(LearningMode.EXAM, 10L, LocalDateTime.now(), 10L));
 
         given(weeklyDefineStrategy.getWeekPeriod(LocalDate.now())).willReturn(new WeekPeriod(LocalDate.now(), LocalDate.now().plusDays(1)));
         given(learningRepository.findLearningWithSolvingCount(member, member.getCurrentCertificate(),
@@ -98,6 +98,7 @@ class PlanProgressServiceTest {
         verify(planProgressRepository, times(1)).saveAll(any());
     }
 
+    //TODO: 해결해야 함
     @Test
     @DisplayName("calculateProgress 메소드 progress 계산 로직 테스트")
     void calculateProgressTest() {
